--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:c+OvqvDN4DPmTZSUVdwut2zNcCzMo7i+TVt+C6Sux8o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:89
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
